--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
  <h2>aaaaaaaaaaaaaaa</h2>
  <h2>aaaaaaaaaaaaaaa</h2>
  <h2>aaaaaaaaaaaaaaa</h2>
- <h2>aaaaaaaaaaaaaeitneit enteaa</h2>
+ <style>
+     #one{
+         width: 1200px;
+         height: 300px;
+         background: #c00;
+     }
+ </style>
+<div id="one">
+
+</div>
 </body>
 </html>
